# gameos

./: .clang-format  CMakeLists.txt  Makefile  README.md  TODO.md  flake.nix  grub.cfg  grub.cfg.in  justfile
.github/workflows/: tests.yml
cmake/: Toolchain-i686-elf.cmake
src/: basic.hh  boot.S  boot.s  config.hh.in  cstring.hh  font8x16.hh  framebuffer.hh  global_constructor_handling.hh  int.hh  kernel.cc  kstd.hh  linker.ld  main.cc  memory.hh  multiboot2.hh  operator_new.hh  pointer_utils.hh  terminal.hh  vga.hh
src/framebuffer/: buffer.hh  font8x16.hh
src/kstd/: array.hh  array_iterator.hh  assert.hh  critical_section.hh  cstring.hh  enum_array.hh  enum_flags.hh  enum_name.hh  font8x16.hh  format.hh  framebuffer.hh  gfx.hh  halt.hh  interrupts.hh  low_level_io.hh  math.hh  memory.hh  multiboot2.hh  operator_new.hh  pointer_utils.hh  programmable_interrupt_controller.hh  ps2.hh  resource.hh  serial.hh  stacktrace.hh  string.hh  string_view.hh  term.hh  time.hh  vga.hh
src/kstd/framebuffer/: buffer.hh  font8x16.hh  framebuffer.hh  term.hh
tests/: CMakeLists.txt
tools/: CMakeLists.txt  preprocessing.cc
